ready to deploy

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --recursive --require test/setup.js test/**/*.test.js",
     "build": "rm -rf dist && mkdir -p dist && babel src/*.js --out-file dist/index.js -s",
-    "exec": "node dist/index.js",
+    "start": "babel-node src/index.js",
     "install": "npm run build",
     "lint": "eslint src test",
     "prepublish": "rm -rf lib && npm run build",
