--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
   "author": "Matias Hernandez <matiasfh@gmail.com> (http://matiashernandez.me)",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.10.0",
     "botkit": "^0.1.1",
-    "es6-promise": "^3.1.2",
-    "jsonfile": "^2.3.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.7.7",
-    "babel-core": "^6.7.7",
+    "jsonfile": "^2.3.0",
+		"babel-cli": "^6.7.7",
+		"babel-core": "^6.7.7",
     "babel-eslint": "^6.0.3",
-    "babel-istanbul": "^0.7.0",
-    "babel-plugin-syntax-flow": "^6.5.0",
+		"babel-plugin-syntax-flow": "^6.5.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-flow-strip-types": "^6.7.0",
     "babel-plugin-typecheck": "^3.8.0",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0"
+  },
+  "devDependencies": {
+    "babel-istanbul": "^0.7.0",
     "coveralls": "^2.11.9",
     "eslint": "^2.8.0",
     "eslint-plugin-flow-vars": "^0.3.0",
     "flow-bin": "^0.23.0",
     "github": "^0.2.4"
+  },
+  "engines": {
+    "node": "5.4.1"
   }
 }
