--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "author": "Matias Hernandez <matiasfh@gmail.com> (http://matiashernandez.me)",
   "license": "MIT",
   "dependencies": {
-    "botkit": "^0.1.1",
-    "jsonfile": "^2.3.0",
-		"babel-cli": "^6.7.7",
-		"babel-core": "^6.7.7",
+    "babel-cli": "^6.7.7",
+    "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.3",
-		"babel-plugin-syntax-flow": "^6.5.0",
+    "babel-plugin-syntax-flow": "^6.5.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-flow-strip-types": "^6.7.0",
     "babel-plugin-typecheck": "^3.8.0",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "botkit": "^0.1.1",
+    "github-api": "^0.11.2",
+    "jsonfile": "^2.3.0"
   },
   "devDependencies": {
     "babel-istanbul": "^0.7.0",
