--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "botkit": "^0.1.1",
+    "foreman": "^1.4.1",
     "github-api": "^0.11.2",
     "jsonfile": "^2.3.0"
   },
