--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Matias Hernandez <matiasfh@gmail.com> (http://matiashernandez.me)",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.10.0",
     "babel-cli": "^6.7.7",
     "babel-core": "^6.7.7",
     "babel-eslint": "^6.0.3",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "babel-istanbul": "^0.7.0",
+    "babel-polyfill": "^6.7.4",
     "coveralls": "^2.11.9",
     "eslint": "^2.8.0",
     "eslint-plugin-flow-vars": "^0.3.0",
