--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "sbot",
+  "name": "nimbus-bot",
   "version": "1.0.0",
   "description": "A Slack bot with multiple powers",
-  "main": "./dist/index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "start": "babel-node src/index.js",
+    "start": "$(npm bin)/nf start",
     "lint": "eslint src test",
     "test:cov": "babel-node $(npm bin)/babel-istanbul cover $(npm bin)/_mocha -- --require test/setup.js test/**/*.test.js"
   },
