--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "botkit": "^0.1.1",
+    "botkit-storage-redis": "^1.0.1",
     "foreman": "^1.4.1",
     "github-api": "https://github.com/michael/github/tarball/master",
     "jsonfile": "^2.3.0"
