--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "nimbus-bot",
   "version": "1.0.0",
   "description": "A Slack bot with multiple powers",
-  "main": "./src/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "start": "$(npm bin)/nf start",
     "lint": "eslint src test",
+    "build": "webpack",
     "test:cov": "babel-node $(npm bin)/babel-istanbul cover $(npm bin)/_mocha -- --require test/setup.js test/**/*.test.js"
   },
   "author": "Matias Hernandez <matiasfh@gmail.com> (http://matiashernandez.me)",
@@ -21,20 +22,33 @@
     "babel-plugin-typecheck": "^3.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
+    "body-parser": "^1.15.0",
     "botkit": "^0.1.1",
     "botkit-storage-redis": "^1.0.1",
+    "dotenv": "^2.0.0",
+    "express": "^4.13.4",
     "foreman": "^1.4.1",
     "github-api": "https://github.com/michael/github/tarball/master",
+    "http": "0.0.0",
     "jsonfile": "^2.3.0"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.7.7",
+    "babel-eslint": "^6.0.4",
     "babel-istanbul": "^0.7.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-typecheck": "^3.8.0",
     "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
     "coveralls": "^2.11.9",
-    "eslint": "^2.8.0",
+    "eslint": "^2.9.0",
+    "eslint-loader": "^1.3.0",
     "eslint-plugin-flow-vars": "^0.3.0",
     "flow-bin": "^0.23.0",
-    "github": "^0.2.4"
+    "github": "^0.2.4",
+    "webpack": "^1.13.0"
   },
   "engines": {
     "node": "5.4.1"
