--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A Slack bot with multiple powers",
   "main": "./dist/index.js",
   "scripts": {
-    "start": "npm run build && node ./dist/index.js",
+    "start": "babel-node src/main.js",
     "lint": "eslint src test",
     "build": "webpack",
     "test:cov": "babel-node $(npm bin)/babel-istanbul cover $(npm bin)/_mocha -- --require test/setup.js test/**/*.test.js"
