--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "nimbus-bot",
   "version": "1.0.0",
   "description": "A Slack bot with multiple powers",
-  "main": "./dist/index.js",
+  "main": "./src/index.js",
   "scripts": {
-    "start": "babel-node src/main.js",
+    "start": "babel-node ./src/main.js",
     "lint": "eslint src test",
     "build": "webpack",
     "test:cov": "babel-node $(npm bin)/babel-istanbul cover $(npm bin)/_mocha -- --require test/setup.js test/**/*.test.js"
