--- a/package.json
+++ b/package.json
@@ -7,29 +7,17 @@
     "start": "nf start",
     "lint": "eslint src test",
     "build": "webpack",
-    "install": "npm run build",
-    "test:cov": "babel-node $(npm bin)/babel-istanbul cover $(npm bin)/mocha -- --require test/setup.js test/**/*.test.js"
+    "postinstall": "webpack --config ./webpack.config.js --progress --color",
+		"test:cov": "babel-node $(npm bin)/babel-istanbul cover $(npm bin)/mocha -- --require test/setup.js test/**/*.test.js"
   },
   "author": "Matias Hernandez <matiasfh@gmail.com> (http://matiashernandez.me)",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.10.0",
-    "babel-cli": "^6.7.7",
-    "babel-core": "^6.7.7",
-    "babel-eslint": "^6.0.3",
-    "babel-plugin-syntax-flow": "^6.5.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-flow-strip-types": "^6.7.0",
-    "babel-plugin-typecheck": "^3.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
     "body-parser": "^1.15.0",
     "botkit": "^0.1.1",
     "botkit-storage-redis": "^1.0.1",
-    "dotenv": "^2.0.0",
     "es6-promisify": "^4.0.0",
     "express": "^4.13.4",
-    "foreman": "^1.4.1",
     "github-api": "https://github.com/michael/github/tarball/master",
     "http": "0.0.0",
     "jenkins": "^0.17.0",
@@ -44,6 +32,7 @@
     "babel-eslint": "^6.0.4",
     "babel-istanbul": "^0.7.0",
     "babel-loader": "^6.2.4",
+		"babel-plugin-syntax-flow": "^6.5.0",
     "babel-plugin-typecheck": "^3.8.0",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
@@ -53,9 +42,9 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-flow-vars": "^0.3.0",
     "flow-bin": "^0.23.0",
-    "github": "^0.2.4",
     "mocha": "^2.4.5",
-    "webpack": "^1.13.0"
+    "webpack": "^1.13.0",
+		"foreman": "^1.4.1"
   },
   "engines": {
     "node": "5.4.1"
