--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "express": "^4.13.4",
     "github-api": "https://github.com/michael/github/tarball/master",
     "http": "0.0.0",
-    "jenkins": "^0.17.0",
+    "jenkins-api": "^0.2.8",
     "jsonfile": "^2.3.0",
     "promisify": "0.0.3",
     "ramda": "^0.21.0"
@@ -33,6 +33,8 @@
     "babel-istanbul": "^0.7.0",
     "babel-loader": "^6.2.4",
 		"babel-plugin-syntax-flow": "^6.5.0",
+		"babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-flow-strip-types": "^6.8.0",
     "babel-plugin-typecheck": "^3.8.0",
     "babel-polyfill": "^6.7.4",
     "babel-preset-es2015": "^6.6.0",
